gnome-panel/libpanel-applet-private/panel-applet-frame-dbus.c
@@ -411,6 +411,7 @@ panel_applet_frame_dbus_load (const gchar                 *iid,
 	PanelAppletFrameDBus *dbus_frame;
 	PanelAppletFrame     *frame;
 	GVariantBuilder       builder;
+	GdkScreen            *screen;
 	gchar                *conf_path;
 	gchar                *background;
 	guint                 orient;
@@ -425,6 +426,7 @@ panel_applet_frame_dbus_load (const gchar                 *iid,
 	frame = PANEL_APPLET_FRAME (dbus_frame);
 	_panel_applet_frame_set_iid (frame, iid);
 
+	screen = panel_applet_frame_activating_get_screen (frame_act);
 	orient = get_panel_applet_orient (panel_applet_frame_activating_get_orientation (frame_act));
 	conf_path = panel_applet_frame_activating_get_conf_path (frame_act);
 	/* we can't really get a background string at this point since we don't
@@ -456,7 +458,7 @@ panel_applet_frame_dbus_load (const gchar                 *iid,
 	g_object_set_data (G_OBJECT (frame), "panel-applet-frame-activating", frame_act);
 
 	panel_applet_container_add (dbus_frame->priv->container,
-				    iid, NULL,
+				    screen, iid, NULL,
 				    (GAsyncReadyCallback) panel_applet_frame_dbus_activated,
 				    frame,
 				    g_variant_builder_end (&builder));
